fix lock / unlock extraction via symmetric difference of locks between ThreadingStates